# rust_auth

./: README.md
client/src/app/: page.tsx
client/src/app/login/: page.tsx
client/src/app/logout/: page.tsx
client/src/app/register/: page.tsx
server/: .env  Cargo.toml
server/migrations/: 20241116102251_user_table.sql
server/src/: main.rs
server/src/controller/: login_user_auth_controller.rs  logout_user_auth_controller.rs  mod.rs  register_user_auth_controller.rs  user_auth_controller.rs
server/src/db/: connection.rs
server/src/routes/: mod.rs  user_auth_routes.rs
