[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7.9"
bcrypt = "0.15.1"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
